RESOLVED FIXED301889
x.com: Can't paste images from Google image search to Twitter's "What's happening" textbox in Safari
https://bugs.webkit.org/show_bug.cgi?id=301889
Summary x.com: Can't paste images from Google image search to Twitter's "What's happe...
Tim Nguyen (:ntim)
Reported 2025-11-03 16:43:13 PST
Attachments
Tim Nguyen (:ntim)
Comment 1 2025-11-03 16:45:33 PST
EWS
Comment 2 2025-12-09 08:38:57 PST
Committed 304166@main (8cbf542936d5): <https://commits.webkit.org/304166@main> Reviewed commits have been landed. Closing PR #53362 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.